 cnp-ingress-mysql-stig-v-235146-block-unused-ports-v9mf1yi.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-mysql-stig-v-235146-block-unused-ports-nminukr
  namespace: kube-system
spec:
  description: "To block all unused ports on MySQL pod"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend # Change your match labels
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
